--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <div class="bottom-container">
   <a class="footer-link" href="https://www.linkedin.com/in/iain-zhou-29467b1b6/">LinkedIn</a>
-  <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+  <a class="footer-link" href="https://www.sauder.ubc.ca/">Education</a>
   <p class="copyright">2022 © Iain Zhou</p>
 </div>
   </body>
